Resolve horzontal overflow issue on mobile
Resolved the imgur image to go responsive when the
page is viewed on a mobile device at 992px or thinner

* Added a 992px breakpoint so desktop users will get
  an image that is the initial width
* Under the 992px breakpoint, the image goes 100%
  width so mobile users don't get horizontal overflow

--- a/scss/src/styles.scss
+++ b/scss/src/styles.scss
@@ -73,6 +73,10 @@ section {
       @include span (1 of 1);
     }
   }
+
+  img {
+    width: 100%;
+  }
 }
 
 .theme {
@@ -125,6 +129,14 @@ section {
       a{
         color: lighten($patriot-blue, 35%);
       }
+    }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  section {
+    img {
+      width: auto;
     }
   }
 }
